// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemainImportGroup should generate the correct typescript (asc) 1`] = `
"import './workspaceSideEffectLib';
import 'sideEffectLib';
import { AnotherFoobar } from './anotherFile';
import { Foobar } from './myFile';
import { AnotherModuleFoo } from 'anotherLib';
import { ModuleFoobar } from 'myLib';
"
`;

exports[`RemainImportGroup should generate the correct typescript (desc) 1`] = `
"import 'sideEffectLib';
import './workspaceSideEffectLib';
import { ModuleFoobar } from 'myLib';
import { AnotherModuleFoo } from 'anotherLib';
import { Foobar } from './myFile';
import { AnotherFoobar } from './anotherFile';
"
`;

exports[`RemainImportGroup should process all imports 1`] = `
Array [
  true,
  true,
  true,
  true,
  true,
  true,
]
`;
